stopped awkward text dragging, fixed svg overflow

--- a/src/css/adsr.css
+++ b/src/css/adsr.css
@@ -1,3 +1,8 @@
-text {
+text, h1, h2, h3, h4 {
   user-select: none;
+}
+
+.svgClass {
+  margin-top: 10px;
+  overflow: visible;
 }
